<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:focusable="true"
    tools:context=".home.CuppingFragment">

    <TextView
        android:id="@+id/cupping_frag_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/cupping_frag_title"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/cupping_start_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="0dp"
        android:text="@string/cupping_start_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cupping_roast_date_button" />

    <TextView
        android:id="@+id/cupping_frag_session_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:text="@string/cupping_frag_session_name"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/cupping_session_input"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/cupping_frag_sample_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="56dp"

        android:text="@string/cupping_frag_sample_count"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cupping_frag_session_name" />

    <TextView
        android:id="@+id/cupping_frag_roaster_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="56dp"
        android:labelFor="@id/cupping_roaster_spinner"
        android:text="@string/cupping_frag_roaster_input"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cupping_frag_sample_count" />

    <TextView
        android:id="@+id/cupping_frag_roast_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="56dp"
        android:text="@string/cupping_frag_roaster_input_label"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cupping_frag_roaster_label" />

    <EditText
        android:id="@+id/cupping_roast_date_input"
        android:layout_width="0dp"
        android:focusable="false"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="6"
        android:hint="@string/cupping_roast_date_input"
        android:inputType="date"
        app:layout_constraintBottom_toBottomOf="@+id/cupping_frag_roast_date"
        app:layout_constraintEnd_toEndOf="@+id/cupping_roaster_spinner"
        app:layout_constraintStart_toStartOf="@+id/cupping_roaster_spinner"
        app:layout_constraintTop_toTopOf="@+id/cupping_frag_roast_date" />

    <ImageButton
        android:id="@+id/cupping_roast_date_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        android:contentDescription="@string/cupping_roast_date_button"
        android:backgroundTint="@color/main_brown_light"
        android:src="@drawable/calendar"
        app:layout_constraintBottom_toBottomOf="@+id/cupping_roast_date_input"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/cupping_roast_date_input" />

    <Spinner
        android:id="@+id/cupping_roaster_spinner"
        android:layout_width="0dp"
        android:layout_height="30dp"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/cupping_frag_roaster_label"
        app:layout_constraintEnd_toEndOf="@+id/cupping_sample_minus_button"
        app:layout_constraintStart_toStartOf="@+id/cupping_sample_label"
        app:layout_constraintTop_toTopOf="@+id/cupping_frag_roaster_label" />

    <ImageButton
        android:id="@+id/cupping_roaster_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        android:contentDescription="@string/cupping_roaster_button"
        android:backgroundTint="@color/main_brown_light"
        android:src="@drawable/roaster_add"
        app:layout_constraintBottom_toBottomOf="@+id/cupping_roaster_spinner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/cupping_roaster_spinner" />

    <EditText
        android:id="@+id/cupping_session_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="75dp"
        android:layout_marginEnd="30dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/cupping_session_input"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/cupping_frag_session_name"
        app:layout_constraintStart_toStartOf="@+id/cupping_sample_label"
        app:layout_constraintTop_toBottomOf="@+id/cupping_frag_title" />

    <TextView
        android:id="@+id/cupping_sample_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:text="@string/cupping_sample_label"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/cupping_frag_sample_count"
        app:layout_constraintStart_toEndOf="@+id/cupping_frag_sample_count"
        app:layout_constraintTop_toTopOf="@+id/cupping_frag_sample_count" />

    <ImageButton
        android:id="@+id/cupping_sample_add_button"
        android:backgroundTint="@color/main_brown_light"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        android:contentDescription="@string/cuppint_sample_add_button"
        android:src="@drawable/plus"
        app:layout_constraintBottom_toBottomOf="@+id/cupping_sample_minus_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/cupping_sample_minus_button" />

    <ImageButton
        android:id="@+id/cupping_sample_minus_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:contentDescription="@string/cupping_sample_minus_button"
        android:src="@drawable/minus"
        android:backgroundTint="@color/main_brown_light"
        app:layout_constraintBottom_toBottomOf="@+id/cupping_sample_label"
        app:layout_constraintEnd_toStartOf="@+id/cupping_sample_add_button"
        app:layout_constraintTop_toTopOf="@+id/cupping_sample_label" />

</androidx.constraintlayout.widget.ConstraintLayout>