<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cups_dialog_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".cupping.GradingDialogFragment">

    <LinearLayout
        android:id="@+id/cups_dialog_title_layout"
        android:layout_width="300dp"
        android:layout_height="match_parent"
        android:background="@color/main_brown_light"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/cups_dialog_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:height="50dp"
            android:gravity="center_vertical"
            android:paddingStart="15sp"
            android:paddingTop="3sp"
            android:paddingEnd="15sp"
            android:textColor="@color/white"
            android:textSize="24sp" />

        <ImageButton
            android:id="@+id/cups_dialog_done"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:background="@null"
            android:contentDescription="@string/ok"
            android:src="@drawable/done" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/cups_dialog_cup_row"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/cups_dialog_cup_one"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@string/cup_one"
            android:minHeight="100dp"
            android:src="@drawable/good_cup" />

        <ImageView
            android:id="@+id/cups_dialog_cup_two"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@string/cup_two"
            android:minHeight="100dp"
            android:src="@drawable/good_cup" />

        <ImageView
            android:id="@+id/cups_dialog_cup_three"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@string/cup_three"
            android:minHeight="100dp"
            android:src="@drawable/good_cup" />

        <ImageView
            android:id="@+id/cups_dialog_cup_four"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@string/cup_four"
            android:minHeight="100dp"
            android:src="@drawable/good_cup" />

        <ImageView
            android:id="@+id/cups_dialog_cup_five"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@string/cup_five"
            android:minHeight="100dp"
            android:src="@drawable/good_cup" />

    </LinearLayout>

</LinearLayout>