<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/new_dealer_layout"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:context=".NewRoasterFragment">

    <TextView
        android:id="@+id/new_dealer_name_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="16dp"
        android:labelFor="@id/new_dealer_name_input"
        android:text="@string/dealer_name"
        app:layout_constraintBottom_toTopOf="@+id/new_dealer_name_input"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="spread_inside" />


    <TextView
        android:id="@+id/new_dealer_email_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="3dp"
        android:labelFor="@id/new_dealer_email_input"
        android:text="@string/dealer_email"
        app:layout_constraintBottom_toTopOf="@+id/new_dealer_email_input"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/new_dealer_name_input" />

    <EditText
        android:id="@+id/new_dealer_name_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="7dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/new_dealer_email_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/new_dealer_name_label" />

    <EditText
        android:id="@+id/new_dealer_email_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/new_dealer_add_button"
        app:layout_constraintEnd_toStartOf="@+id/new_dealer_add_button"
        app:layout_constraintStart_toStartOf="@+id/new_dealer_add_button"
        app:layout_constraintTop_toBottomOf="@+id/new_dealer_email_label" />

    <Button
        android:id="@+id/new_dealer_cancel_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:text="@string/cancel_button"
        app:layout_constraintBaseline_toBaselineOf="@+id/new_dealer_add_button"
        app:layout_constraintEnd_toStartOf="@+id/new_dealer_add_button"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/new_dealer_add_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="6dp"
        android:text="@string/add_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/new_dealer_cancel_button"
        app:layout_constraintTop_toBottomOf="@+id/new_dealer_email_input" />


</androidx.constraintlayout.widget.ConstraintLayout>